--- a/index.html
+++ b/index.html
@@ -158,10 +158,10 @@ I am willing to take on challenges and explore new techniques and tools to conti
             <div class="overlay">
               <p>Container</p>
               <div class="iconos-contenedor">
-                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/TheServbots111?tab=repositories" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-github"></i>
                 </a>
-                <a href="https://www.pexels.com/es-es/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.artstation.com/artwork/zPe5k4" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-laptop"></i>
                 </a>
               </div>
@@ -176,10 +176,10 @@ I am willing to take on challenges and explore new techniques and tools to conti
             <div class="overlay">
               <p>Lion Fur</p>
               <div class="iconos-contenedor">
-                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/TheServbots111?tab=repositories" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-github"></i>
                 </a>
-                <a href="https://www.pexels.com/es-es/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.artstation.com/artwork/rJOnDG" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-laptop"></i>
                 </a>
               </div>
@@ -194,10 +194,10 @@ I am willing to take on challenges and explore new techniques and tools to conti
             <div class="overlay">
               <p>Red Panda</p>
               <div class="iconos-contenedor">
-                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/TheServbots111?tab=repositories" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-github"></i>
                 </a>
-                <a href="https://www.pexels.com/es-es/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.artstation.com/artwork/04EgZE" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-laptop"></i>
                 </a>
               </div>
@@ -212,10 +212,10 @@ I am willing to take on challenges and explore new techniques and tools to conti
             <div class="overlay">
               <p>Roller Skate</p>
               <div class="iconos-contenedor">
-                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/TheServbots111?tab=repositories" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-github"></i>
                 </a>
-                <a href="https://www.pexels.com/es-es/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.artstation.com/artwork/lDZqdV" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-laptop"></i>
                 </a>
               </div>
@@ -230,10 +230,10 @@ I am willing to take on challenges and explore new techniques and tools to conti
             <div class="overlay">
               <p>Plasma Lamp</p>
               <div class="iconos-contenedor">
-                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/TheServbots111?tab=repositories" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-github"></i>
                 </a>
-                <a href="https://www.pexels.com/es-es/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.artstation.com/artwork/LRkyxw" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-laptop"></i>
                 </a>
               </div>
@@ -248,10 +248,10 @@ I am willing to take on challenges and explore new techniques and tools to conti
             <div class="overlay">
               <p>Robot</p>
               <div class="iconos-contenedor">
-                <a href="https://github.com/" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/TheServbots111?tab=repositories" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-github"></i>
                 </a>
-                <a href="https://www.pexels.com/es-es/" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.artstation.com/artwork/PXqx14" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-laptop"></i>
                 </a>
               </div>
@@ -262,7 +262,7 @@ I am willing to take on challenges and explore new techniques and tools to conti
       </div>
     </div>
     <!--Mas articulos-->
-    <a href="https://www.github.com" target="_blank" rel="noopener noreferrer">
+    <a href="https://www.artstation.com/theservbots111" target="_blank" rel="noopener noreferrer">
       <button type="button" class="btn btn-info">
         More projects here!
         <i class="bi bi-arrow-right-circle-fill"></i>
