--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@ I am willing to take on challenges and explore new techniques and tools to conti
 
   <!-- Pie de pagina (footer) -->
   <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
-    <img class="footer-logo" src="./images/icono-blanco.svg" alt="logo del portafolio">
+    <img class="footer-logo" src="./images/pop_cat.jpg" alt="logo del portafolio">
     <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
       <a href="https://twitter.com/freecodecamES" target="_blank" rel="noopener noreferrer">
         <i class="bi bi-twitter-x"></i>
