--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@ I am willing to take on challenges and explore new techniques and tools to conti
           <div class="proyecto">
             <img src="./images/ContenedorFnaf.jpg" alt="Proyecto 1">
             <div class="overlay">
-              <p>Container</p>
+              <p>Magic Axe - Animation</p>
               <div class="iconos-contenedor">
                 <a href="https://github.com/TheServbots111?tab=repositories" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-github"></i>
                 </a>
-                <a href="https://www.artstation.com/artwork/zPe5k4" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.artstation.com/artwork/VJKyGb" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-laptop"></i>
                 </a>
               </div>
@@ -174,12 +174,12 @@ I am willing to take on challenges and explore new techniques and tools to conti
           <div class="proyecto">
             <img src="./images/Fur.jpg" alt="Proyecto 2">
             <div class="overlay">
-              <p>Lion Fur</p>
+              <p>Ornamental Elements</p>
               <div class="iconos-contenedor">
                 <a href="https://github.com/TheServbots111?tab=repositories" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-github"></i>
                 </a>
-                <a href="https://www.artstation.com/artwork/rJOnDG" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.artstation.com/artwork/OG0n6k" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-laptop"></i>
                 </a>
               </div>
@@ -192,12 +192,12 @@ I am willing to take on challenges and explore new techniques and tools to conti
           <div class="proyecto">
             <img src="./images/PandaRojo.jpg" alt="Proyecto 3">
             <div class="overlay">
-              <p>Red Panda</p>
+              <p>Container</p>
               <div class="iconos-contenedor">
                 <a href="https://github.com/TheServbots111?tab=repositories" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-github"></i>
                 </a>
-                <a href="https://www.artstation.com/artwork/04EgZE" target="_blank" rel="noopener noreferrer">
+                <a href="https://www.artstation.com/artwork/zPe5k4" target="_blank" rel="noopener noreferrer">
                   <i class="bi bi-laptop"></i>
                 </a>
               </div>
