--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ I am willing to take on challenges and explore new techniques and tools to conti
         <!-- Proyecto 1 -->
         <div class="col-12 col-md-6 col-lg-4 ">
           <div class="proyecto">
-            <img src="./images/ContenedorFnaf.jpg" alt="Proyecto 1">
+            <img src="./images/Axe.png" alt="Proyecto 1">
             <div class="overlay">
               <p>Magic Axe - Animation</p>
               <div class="iconos-contenedor">
@@ -172,7 +172,7 @@ I am willing to take on challenges and explore new techniques and tools to conti
         <!-- Proyecto 2 -->
         <div class="col-12 col-md-6 col-lg-4 ">
           <div class="proyecto">
-            <img src="./images/Fur.jpg" alt="Proyecto 2">
+            <img src="./images/Ornamento.png" alt="Proyecto 2">
             <div class="overlay">
               <p>Ornamental Elements</p>
               <div class="iconos-contenedor">
@@ -190,7 +190,7 @@ I am willing to take on challenges and explore new techniques and tools to conti
         <!-- Proyecto 3 -->
         <div class="col-12 col-md-6 col-lg-4 ">
           <div class="proyecto">
-            <img src="./images/PandaRojo.jpg" alt="Proyecto 3">
+            <img src="./images/ContenedorFnaf.jpg" alt="Proyecto 3">
             <div class="overlay">
               <p>Container</p>
               <div class="iconos-contenedor">
